Fixed Z-indexes

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -137,7 +137,7 @@ text {
   width: 100%;
   height: 15em;
   border: 0;
-  z-index: 10000;
+  z-index: 1500;
   font-size: 12pt;
   overflow: auto;
 
@@ -194,7 +194,7 @@ text {
 }
 
 #hud {
-  z-index: 1000;
+  z-index: 1800;
   position: absolute;
   top: calc(50vh - 4em);
   left: 15vw;
@@ -219,7 +219,7 @@ text {
 
 #pasteboard {
   position: absolute;
-  z-index: 1000;
+  z-index: 1800;
   top: 5vw;
   left: 15vw;
   width: 70vw;
